[package]
name = "rocky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
jg = { git = "https://github.com/ovuncyayla/jg.git", branch = "dev" }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
